<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:activity=".activity.MainActivity">

    <item
        android:id="@+id/menu_main_run"
        android:icon="@drawable/menu_main_run"
        android:orderInCategory="100"
        android:title="@string/menu_main_run"
        app:showAsAction="ifRoom"/>

    <item
        android:icon="@drawable/menu_main_more"
        android:orderInCategory="101"
        android:title="@string/menu_main_more"
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/menu_main_new"
                android:icon="@drawable/menu_main_new"
                android:orderInCategory="200"
                android:title="@string/menu_main_new"
                app:showAsAction="ifRoom"/>

            <item
                android:id="@+id/menu_main_open"
                android:icon="@drawable/menu_main_open"
                android:orderInCategory="300"
                android:title="@string/menu_main_open"
                app:showAsAction="ifRoom"/>

            <item
                android:id="@+id/menu_main_save"
                android:orderInCategory="400"
                android:title="@string/menu_main_save"
                app:showAsAction="ifRoom"/>

            <item
                android:id="@+id/menu_main_saveas"
                android:icon="@drawable/menu_main_saveas"
                android:orderInCategory="500"
                android:title="@string/menu_main_saveas"
                app:showAsAction="ifRoom"/>

            <item
                android:id="@+id/menu_main_help"
                android:icon="@drawable/menu_main_help"
                android:orderInCategory="600"
                android:title="@string/menu_main_help"
                app:showAsAction="ifRoom"/>

            <item
                android:id="@+id/menu_main_about"
                android:icon="@drawable/menu_main_about"
                android:orderInCategory="700"
                android:title="@string/menu_main_about"
                app:showAsAction="ifRoom"/>

        </menu>

    </item>

</menu>
